scream: Add missing GST_PLUGIN_LDFLAGS in Makefile.am

--- a/gst/scream/Makefile.am
+++ b/gst/scream/Makefile.am
@@ -6,12 +6,21 @@ libgstscream_la_SOURCES = \
     gstscreamqueue.c
 
 libgstscream_la_CFLAGS = \
-    -g -O0 \
+    -Wall -Wextra -Werror \
     $(GST_PLUGINS_BASE_CFLAGS) \
     $(GST_BASE_CFLAGS) \
     $(GST_CFLAGS)
 
-libgstscream_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS) -lgstrtp-1.0
+libgstscream_la_LIBADD = \
+    -lgstrtp-1.0 \
+    $(GST_PLUGINS_BASE_LIBS) \
+    $(GST_BASE_LIBS) \
+    $(GST_LIBS)
+
+libgstscream_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+if !GST_PLUGIN_BUILD_STATIC
+libgstscream_la_LIBTOOLFLAGS = --tag=disable-static
+endif
 
 noinst_HEADERS = \
     gstscreamcontroller.h \
